Release Notes

HEAD, planned as v0.32
- Fixed some bugs in the creation of circuits.

v0.31, released on 3. September 2024
- Added a run command to the cli to run circuit headless
- Main open dialog is able to open FSM and Truth Tables
- FSM editor highlights the current transition
- Allows disabling LED's in the measurement graph
- Adds drivers with inverted output
- Adds a minified circuit as a new shape for embedded circuits
- Highlights the input connection port in the multiplexer when the
  input is selected.
- Allows recovering from oscillations.
- Supports XDG_CONFIG_HOME environment variable
- Fixes a bug in max path len calculation

v0.30, released on 3. February 2023
- Added a search function
- Added a presentation mode.
- Adds Q and CTRL-Q hotkeys to copy the component the mouse
  pointer is hovering over.
- Now there is resetRandom method available in the test code to
  reset the random number generator used by the random function.
- The remote server is now disabled by default.
  It must be enabled in the settings.
- When a new component has been placed with CRTL click,
  you can place another one.
- Fixes the ignored default value in demuxer HDL export.

v0.29, released on 11. February 2022
- Allows loading byte base files in big-endian format.
- Added some more DIL chips
- Tunnel now shows signal state
- Fixes tutorial dialog positioning issue
- Fixed some issues with 7489 and 74189
- Fixed a bug in the LUT component that caused difficulties
  when generic code was executed.
- Fixed an issue in the seven segment persistence of vision
  implementation.
- Fixed a Verilog generation issue when using filenames that
  contain spaces.

v0.28, released on 13. September 2021
- Inputs and outputs can have a smaller shape.
- Added paste functionality to ROM data editor.
- Added an rle encoding for storing rom content, which can
  result in smaller dig files.
- Added some more ATF150x devices
- Probe is able to count edges.